# mshyprlandconf

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  flake.nix  justfile  mise.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/hyprconf-core/: Cargo.toml
crates/hyprconf-core/src/: conf.rs  fs.rs  hyprctl.rs  lib.rs  lua.rs  model.rs  schema.rs  structured.rs  validate.rs  value.rs
crates/hyprconf-core/src/conf/: document.rs  mapper.rs  parser.rs  serializer.rs
crates/hyprconf-core/src/lua/: document.rs  extract.rs  mapper.rs  parser.rs  serializer.rs
crates/hyprconf-core/src/schema/: data.rs
crates/hyprconf-core/tests/: conf_roundtrip.rs  lua_roundtrip.rs  serializer_snapshots.rs
crates/hyprconf-core/tests/fixtures/conf/: basic.conf  binds.conf  colors.conf  cycle_a.conf  cycle_b.conf  main.conf  missing.conf  roundtrip.conf
crates/hyprconf-core/tests/fixtures/lua/: declarative.lua  extra.lua
crates/hyprconf-gui/: Cargo.toml
crates/hyprconf-gui/src/: color_picker.rs  diff.rs  edit.rs  fuzzy.rs  load.rs  main.rs  profiles.rs  save.rs  settings.rs  ui_tests.rs  view.rs
crates/hyprconf-gui/src/view/: mod.rs  styles.rs
meta/: README.md  hyprland-config-keys.txt
packaging/: README.md  hyprconf.desktop
packaging/aur/: PKGBUILD
packaging/flatpak/: io.github.hyprconf.hyprconf.yaml
