[workspace]
resolver = "2"
members = ["crates/hyprconf-core", "crates/hyprconf-gui"]

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyprconf/hyprconf"
authors = ["hyprconf contributors"]

[workspace.dependencies]
# Internal crates
hyprconf-core = { path = "crates/hyprconf-core", version = "0.8.0" }

# GUI
iced = "0.14"

# Data structures
indexmap = "2"

# XDG / platform directories
directories = "6"

# Filesystem
glob = "0.3"

# Lua parsing (lossless, for the declarative static path)
full_moon = "2"

# Errors / diagnostics
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lints are defined once for the whole workspace and opted into per crate
# via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"

# Keep release builds lean; we will tune this further when we ship binaries.
[profile.release]
lto = "thin"
strip = true
