[workspace]
resolver = "2"
members = ["crates/hyprconf-core", "crates/hyprconf-gui"]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hyprconf/hyprconf"
authors = ["hyprconf contributors"]

[workspace.dependencies]
# Internal crates
hyprconf-core = { path = "crates/hyprconf-core", version = "1.0.0" }

# GUI (canvas: the 2D color-picker area + hue strip)
iced = { version = "0.14", features = ["canvas"] }

# Data structures
indexmap = "2"

# XDG / platform directories
directories = "6"

# Settings persistence
serde = { version = "1", features = ["derive"] }
toml = "1"

# Filesystem
glob = "0.3"

# Lua parsing (lossless, for the declarative static path)
full_moon = "2"

# Errors / diagnostics
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lints are defined once for the whole workspace and opted into per crate
# via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"

# Reproducible, lean release builds for shipped binaries: full LTO and a single
# codegen unit (more deterministic output, smaller/faster binary), symbols
# stripped. For byte-for-byte reproducibility also set SOURCE_DATE_EPOCH and
# `RUSTFLAGS=--remap-path-prefix=$PWD=.` in the release environment.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"
